2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: When browsing errors, show
	the activated error message in the status bar. Fixes bug #430493.

	* MonoDevelop.Ide.Gui/Pad.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/IWorkbench.cs:
	* MonoDevelop.Ide.Gui/ProgressMonitors.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui/IWorkbenchLayout.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Show the build output pad
	in the view list, so it can be made visible even before building a
	project.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.mdp: Fix assembly references.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Don't crash if the project
	preferences files can't be created.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Search/ForwardTextFileIterator.cs: Notify changes
	done in files. Fixes bug 434693 - Status icon doesn't update when
	find/replace is done.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Fixed
	'Bug 436669 - function hints (tooltip) hides typing when typing a
	multi-line function'.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/DebugCommands.cs: Fix the build.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/DebugCommands.cs:
	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Disable the Run and Debug
	commands if the current solution or project can't be executed.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Disable the Run command if
	the current solution or project can't be executed.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: moved ambience extension node to project